Sidemeny on mobile now shows dividers correctly

--- a/src/components/SideMenu/SideMenu.css
+++ b/src/components/SideMenu/SideMenu.css
@@ -16,12 +16,14 @@
 /*Options*/
 .side-menu-div {
   width: 100%;
+  gap: 2px;
   flex-direction: column;
 }
 .side-menu-options {
   flex-direction: column;
   justify-content: start;
   overflow: scroll;
+  gap: 2px;
 }
 .side-menu-opt {
   color: var(--text-color);
@@ -40,7 +42,6 @@
   background-color: var(--hover);
 }
 .side-menu-divider {
-  margin: 3px 0;
   border-bottom: 1px solid var(--divider);
   width: 80%;
 }
@@ -65,7 +66,6 @@
   /*Options*/
   .side-menu-options {
     flex-direction: row;
-    gap: 5px;
     padding: 0 10px;
   }
   .side-menu-div {
@@ -80,5 +80,11 @@
     min-width: 50px;
     padding: 0 7px;
     height: 50px;
+  }
+  .side-menu-divider {
+    border-right: 1px solid var(--divider);
+    border-bottom: 0;
+    width: 0;
+    height: 45px;
   }
 }
